--- a/extensions/Opera/manifest.json
+++ b/extensions/Opera/manifest.json
@@ -4,7 +4,7 @@
     "name": "plugCubed",
     "description": "Adding a new dimension to plug.dj",
     "homepage_url": "http://plugCubed.net",
-    "version": "3.0.5.691",
+    "version": "3.0.7.701",
 
     "icons": {
         "48": "icons/48.png",
@@ -13,20 +13,20 @@
     },
 
     "content_scripts": [{
-        "matches": ["http://plug.dj/*"],
+        "matches": ["https://plug.dj/*"],
         "exclude_matches": [
-            "http://plug.dj/communities/",
-            "http://plug.dj/about",
-            "http://plug.dj/terms",
-            "http://plug.dj/privacy",
-            "http://plug.dj/logout",
-            "http://plug.dj/"
+            "https://plug.dj/communities/",
+            "https://plug.dj/about",
+            "https://plug.dj/terms",
+            "https://plug.dj/privacy",
+            "https://plug.dj/logout",
+            "https://plug.dj/"
         ],
         "js": ["loader.js"]
     }],
 
     "permissions": [
-        "http://plug.dj/*"
+        "https://plug.dj/*"
     ],
 
     "web_accessible_resources": [
