Update to Firefox extension build settings

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@ extensions/Firefox-release
 extensions/Opera.crx
 extensions/promotionalSmall.png
 extensions/Opera/plugCubed.js
+extensions/Firefox/plugCubed.js
