--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "grunt-exec": "^0.4.6",
         "grunt-execute": "^0.2.2",
         "grunt-mozilla-addon-sdk": "^0.3.2",
-        "grunt-requirejs-obfuscate": "^0.1.3",
+        "grunt-requirejs-obfuscate": "plugCubed/grunt-requirejs-obfuscate#patch2",
         "grunt-text-replace": "^0.3.12",
         "time-grunt": "^1.0.0",
         "yuicompressor": "^2.4.8"
