Working on support for Chrome and rewriting building extensions. Currently not released yet.

--- a/extensions/shared/manifest.src.json
+++ b/extensions/shared/manifest.src.json
@@ -1,7 +1,8 @@
 {
     "manifest_version": 2,
-
+    "author": "plug³ Team",
     "name": "plugCubed",
+    "short_name": "plug³",
     "description": "Adding a new dimension to plug.dj",
     "homepage_url": "https://plugCubed.net",
     "version": "VERSION.MAJOR.VERSION.MINOR.VERSION.PATCH.VERSION.BUILD",
