--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "author": "The plugCubed Team",
   "description": "Grunt build setup for plugCubed",
   "devDependencies": {
-    "closurecompiler": "^1.3.2",
-    "grunt-aws-s3": "^0.13.0",
+    "closurecompiler": "^1.5.2",
+    "crx": "^3.0.2",
+    "grunt-aws-s3": "^0.13.1",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-exec": "^0.4.6",
@@ -13,8 +14,8 @@
     "grunt-mozilla-addon-sdk": "^0.3.2",
     "grunt-requirejs-obfuscate": "plugCubed/grunt-requirejs-obfuscate#patch2",
     "grunt-text-replace": "^0.4.0",
-    "load-grunt-tasks": "^3.1.0",
-    "time-grunt": "^1.2.0",
+    "load-grunt-tasks": "^3.2.0",
+    "time-grunt": "^1.2.1",
     "yuicompressor": "^2.4.8"
   },
   "private": true
