--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "devDependencies": {
     "closurecompiler": "^1.5.2",
     "crx": "^3.0.2",
-    "grunt-aws-s3": "^0.13.1",
+    "grunt-aws": "^0.5.4",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-exec": "^0.4.6",
