Updated to latest langs

--- a/package.json
+++ b/package.json
@@ -4,17 +4,25 @@
   "version": "1.0.0",
   "author": "The plugCubed Team",
   "devDependencies": {
+    "chai": "^3.2.0",
     "closurecompiler": "^1.5.2",
     "crx": "^3.0.3",
+    "eslint": "^1.4.3",
+    "eslint-config-thedark1337": "^0.3.0",
+    "eslint-config-xo": "^0.6.0",
+    "fs-access": "^1.0.0",
     "grunt": "^0.4.5",
-    "grunt-aws": "^0.5.4",
-    "grunt-contrib-copy": "^0.8.0",
+    "grunt-aws": "^0.6.0",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-copy": "^0.8.1",
     "grunt-contrib-requirejs": "^0.4.4",
     "grunt-execute": "^0.2.2",
     "grunt-mozilla-addon-sdk": "rpl/grunt-mozilla-addon-sdk",
-    "grunt-requirejs-obfuscate": "plugCubed/grunt-requirejs-obfuscate#patch2",
     "grunt-text-replace": "^0.4.0",
-    "grunto": "^2.0.2",
+    "grunto": "^2.0.4",
+    "mocha": "^2.3.2",
+    "mocha-eslint": "^1.0.0",
     "yuicompressor": "^2.4.8"
   },
   "homepage": "https://plugcubed.net",
