Add mocha as npm test script in package.json

--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/plugcubed/plugcubed.git"
+  },
+  "scripts": {
+    "test": "mocha"
   }
 }
