Add in new Gulp build system

--- a/package.json
+++ b/package.json
@@ -1,29 +1,38 @@
 {
-  "name": "plugCubed",
-  "description": "Grunt build setup for plugCubed",
+  "name": "plugcubed-new-build",
+  "description": "Gulp Build System for PlugCubed",
   "version": "1.0.0",
   "author": "The plugCubed Team",
+  "bugs": {
+    "url": "https://github.com/plugcubed/plugcubed/issues",
+    "email": "1337alexpham@gmail.com"
+  },
   "devDependencies": {
-    "chai": "^3.3.0",
-    "closurecompiler": "^1.5.2",
-    "crx": "^3.0.3",
-    "eslint": "^1.5.1",
-    "eslint-config-thedark1337": "^0.3.0",
-    "eslint-config-xo": "^0.6.0",
-    "fs-access": "^1.0.0",
-    "grunt": "^0.4.5",
-    "grunt-aws": "^0.6.0",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-copy": "^0.8.1",
-    "grunt-contrib-requirejs": "^0.4.4",
-    "grunt-execute": "^0.2.2",
-    "grunt-mozilla-addon-sdk": "rpl/grunt-mozilla-addon-sdk",
-    "grunt-text-replace": "^0.4.0",
-    "grunto": "^2.0.5",
-    "mocha": "^2.3.3",
-    "mocha-eslint": "^1.0.0",
-    "yuicompressor": "^2.4.8"
+    "del": "^2.2.1",
+    "eslint-config-thedark1337": "^2.0.1",
+    "graceful-fs": "^4.1.4",
+    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-bytediff": "^1.0.0",
+    "gulp-change": "^1.0.0",
+    "gulp-crx-pack": "^1.0.1",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-data": "^1.2.1",
+    "gulp-hub": "frankwallis/gulp-hub#registry-init",
+    "gulp-jsbeautifier": "^2.0.3",
+    "gulp-just-replace": "^1.0.2",
+    "gulp-mocha": "^2.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-template": "^4.0.0",
+    "gulp-uglify": "^1.5.4",
+    "gulp-zip": "^3.2.0",
+    "jpm": "^1.1.1",
+    "mkdirp": "^0.5.1",
+    "mocha": "^2.5.3",
+    "mocha-eslint": "^2.1.1",
+    "requirejs": "^2.2.0",
+    "try-require": "^1.2.1"
   },
   "homepage": "https://plugcubed.net",
   "license": "GPL-3.0",
@@ -33,6 +42,16 @@
     "url": "git+https://github.com/plugcubed/plugcubed.git"
   },
   "scripts": {
-    "test": "mocha"
+    "buildAll": "gulp build:all",
+    "buildAlpha": "gulp build:alpha",
+    "buildDev": "gulp build:dev",
+    "buildRelease": "gulp build:release",
+    "firefox": "jpm xpi --verbose --addon-dir ./extensions/Firefox",
+    "testAlpha": "gulp test:alpha",
+    "testDev": "gulp test:dev",
+    "testRelease": "gulp test:release",
+    "watchAlpha": "gulp watch:alpha",
+    "watchDev": "gulp watch:dev",
+    "watchRelease": "gulp watch:release"
   }
 }
