--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "plugcubed-new-build",
+  "name": "plugCubed",
   "description": "Gulp Build System for PlugCubed",
   "version": "1.0.0",
   "author": "The plugCubed Team",
@@ -47,6 +47,7 @@
     "buildDev": "gulp build:dev",
     "buildRelease": "gulp build:release",
     "firefox": "jpm xpi --verbose --addon-dir ./extensions/Firefox",
+    "test": "gulp test:alpha",
     "testAlpha": "gulp test:alpha",
     "testDev": "gulp test:dev",
     "testRelease": "gulp test:release",
