--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "buildDev": "gulp build:dev",
     "buildRelease": "gulp build:release",
     "firefox": "jpm xpi --verbose --addon-dir ./extensions/Firefox",
-    "test": "gulp test:alpha",
+    "test": "npm run testAlpha && npm run testRelease",
     "testAlpha": "gulp test:alpha",
     "testDev": "gulp test:dev",
     "testRelease": "gulp test:release",
