--- a/extensions/Firefox/package.json
+++ b/extensions/Firefox/package.json
@@ -5,7 +5,10 @@
     "author": "plug³ Team",
     "homepage": "https://plugcubed.net",
     "license": "MIT",
-    "version": "4.3.0-28",
+    "version": "4.3.0-30",
     "id": "plug3@plugcubed.net",
-    "icon": "resource://plug3-at-plugcubed-dot-net/data/icons/48.png"
+    "icon": "resource://plug3-at-plugcubed-dot-net/data/icons/48.png",
+    "permissions": {
+        "multiprocess": true
+    }
 }
