--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
         "no-implicit-coercion": 0,
         "no-loop-func": 0,
         "no-negated-condition": 0,
+        "no-useless-escape": 0,
         "no-var": 0,
         "object-shorthand": 0,
         "one-var": [2, {
@@ -33,6 +34,9 @@
             "initialized": "never"
         }],
         "prefer-arrow-callback": 0,
+        "prefer-destructuring": 0,
+        "prefer-reflect": 0,
+        "prefer-rest-params": 0,
         "prefer-spread": 0,
         "prefer-template": 0,
         "strict": 0
