--- a/extensions/shared/manifest.src.json
+++ b/extensions/shared/manifest.src.json
@@ -16,22 +16,22 @@
     "content_scripts": [{
         "matches": ["https://*.plug.dj/*"],
         "exclude_matches": [
-            "https://*.plug.dj/",
-            "https://*.plug.dj/@/*",
-            "https://*.plug.dj/_/*",
-            "https://*.plug.dj/about",
-            "https://*.plug.dj/ba",
-            "https://*.plug.dj/dashboard",
-            "https://*.plug.dj/jobs",
-            "https://*.plug.dj/logout",
-            "https://*.plug.dj/partners",
-            "https://*.plug.dj/plot",
-            "https://*.plug.dj/press",
-            "https://*.plug.dj/privacy",
-            "https://*.plug.dj/purchase",
-            "https://*.plug.dj/subscribe",
-            "https://*.plug.dj/team",
-            "https://*.plug.dj/terms"
+            "*://*/",
+            "*://*/*@*/*",
+            "*://*/*_*/*",
+            "*://*/*about*",
+            "*://*/*ba*",
+            "*://*/*dashboard*",
+            "*://*/*jobs*",
+            "*://*/*logout*",
+            "*://*/*partners*",
+            "*://*/*plot*",
+            "*://*/*press*",
+            "*://*/*privacy*",
+            "*://*/*purchase*",
+            "*://*/*subscribe*",
+            "*://*/*team*",
+            "*://*/*terms*"
         ],
         "js": ["loader.js"]
     }],
