--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
         "_": false
     },
     "rules": {
+        "no-alert": 0,
         "camelcase": 0,
         "func-style": 0,
         "newline-per-chained-call": 0,
