--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-bytediff": "^1.0.0",
     "gulp-cssnano": "^2.1.2",
     "gulp-eslint": "^3.0.1",
+    "gulp-exec": "^2.1.3",
     "gulp-hub": "frankwallis/gulp-hub#registry-init",
     "gulp-if": "^2.0.2",
     "gulp-just-replace": "^1.0.2",
