--- a/tasks/.eslintrc.json
+++ b/tasks/.eslintrc.json
@@ -1,5 +1,9 @@
 {
     "env": {
         "node": true
+    },
+    "globals": {
+      "devVersionExists": false,
+      "versions": false
     }
 }
