Additional updates for the upcoming release
Rewrote Firefox Extension for WebExtensions. Updated depdendencies and rewrote some of the gulp tasks. Added commands panel to control panel. Added autoclear for userdata. Rewrote Darryan's implementation of chat mention sounds. Added in quick ban / mute (missing icons). Rewrote commands handler, now beginning to add more. Rewrote Darryan's implementation of link in song update so it matches with the UI. Added in a basic impl of user join / leave for friends. Beginning work on stacking plugCubed notifications to avoid spam.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,10 @@
 {
     "extends": "thedark1337/browser",
-    "ecmaFeatures": {
-        "modules": false
+    "parserOptions": {
+        "ecmaVersion": 5,
+        "ecmaFeatures": {
+            "modules": false
+        }
     },
     "env": {
         "amd": true
