Update: Dependencies to latest versons

--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
     "email": "1337alexpham@gmail.com"
   },
   "devDependencies": {
-    "autoprefixer": "^7.2.3",
+    "autoprefixer": "^7.2.4",
     "cssnano": "^4.0.0-rc.2",
     "eslint-config-thedark1337": "^4.13.1",
     "graceful-fs": "^4.1.11",
-    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp": "^4.0.0",
     "gulp-bytediff": "^1.0.0",
     "gulp-data": "^1.2.1",
     "gulp-eslint": "^4.0.0",
-    "gulp-hub": "^4.1.0",
+    "gulp-hub": "^4.2.0",
     "gulp-if": "^2.0.2",
     "gulp-just-replace": "^1.0.2",
-    "gulp-postcss": "^7.0.0",
+    "gulp-postcss": "^7.0.1",
     "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^2.6.1",
-    "gulp-template": "^4.0.0",
+    "gulp-sourcemaps": "^2.6.3",
+    "gulp-template": "^5.0.0",
     "gulp-uglify": "^3.0.0",
-    "gulp-zip": "^4.0.0",
+    "gulp-zip": "^4.1.0",
     "is-ci": "^1.0.10",
     "make-dir": "^1.1.0",
     "postcss-unprefix": "^2.1.1",
