--- a/.editorconfig
+++ b/.editorconfig
@@ -3,7 +3,8 @@ root = true
 [*]
 end_of_line = lf
 charset = utf-8
-insert_final_newline = false
+trim_trailing_whitespace = true
+insert_final_newline = true
 
 [**.js]
 indent_style = space
