--- a/package.json
+++ b/package.json
@@ -13,19 +13,19 @@
     "email": "1337alexpham@gmail.com"
   },
   "devDependencies": {
-    "autoprefixer": "^8.4.1",
-    "cssnano": "^4.0.0-rc.2",
+    "autoprefixer": "^8.6.5",
+    "cssnano": "^4.0.2",
     "eslint-config-thedark1337": "^4.13.1",
     "graceful-fs": "^4.1.11",
     "gulp": "^4.0.0",
     "gulp-bytediff": "^1.0.0",
     "gulp-data": "^1.3.1",
-    "gulp-eslint": "^4.0.2",
+    "gulp-eslint": "^5.0.0",
     "gulp-hub": "^4.2.0",
     "gulp-if": "^2.0.2",
     "gulp-just-replace": "^1.0.2",
     "gulp-postcss": "^7.0.1",
-    "gulp-rename": "^1.2.2",
+    "gulp-rename": "^1.3.0",
     "gulp-sourcemaps": "^2.6.3",
     "gulp-template": "^5.0.0",
     "gulp-uglify": "^3.0.0",
