--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "email": "1337alexpham@gmail.com"
   },
   "devDependencies": {
-    "autoprefixer": "^9.1.3",
-    "cssnano": "^4.0.5",
+    "autoprefixer": "^9.4.8",
+    "cssnano": "^4.1.10",
     "eslint-config-thedark1337": "^4.13.1",
-    "graceful-fs": "^4.1.11",
+    "graceful-fs": "^4.1.15",
     "gulp": "^4.0.0",
     "gulp-bytediff": "^1.0.0",
     "gulp-data": "^1.3.1",
@@ -26,15 +26,15 @@
     "gulp-just-replace": "^1.0.2",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
-    "gulp-sourcemaps": "^2.6.3",
+    "gulp-sourcemaps": "^2.6.5",
     "gulp-template": "^5.0.0",
     "gulp-uglify": "^3.0.1",
     "gulp-zip": "^4.2.0",
-    "is-ci": "^1.2.0",
-    "make-dir": "^1.3.0",
-    "postcss-unprefix": "^2.1.3",
-    "requirejs": "^2.3.5",
-    "rimraf": "^2.6.2"
+    "is-ci": "^2.0.0",
+    "make-dir": "^2.0.0",
+    "postcss-unprefix": "^2.1.4",
+    "requirejs": "^2.3.6",
+    "rimraf": "^2.6.3"
   },
   "homepage": "https://plugcubed.net",
   "license": "GPL-3.0",
@@ -56,5 +56,7 @@
     "watchDev": "gulp watch:dev",
     "watchRelease": "gulp watch:release"
   },
-  "dependencies": {}
+  "dependencies": {
+    "ci-info": "^2.0.0"
+  }
 }
